[gd_scene load_steps=6 format=3 uid="uid://cmaynrlo5low5"]

[ext_resource type="Script" uid="uid://knn3bhx4eeoc" path="res://Collector/clock.gd" id="1_pg21k"]
[ext_resource type="AudioStream" uid="uid://bvvxkf681y3ht" path="res://Collector/tick1_rev.wav" id="2_8obq2"]
[ext_resource type="AudioStream" uid="uid://dsnmwxlc2kob" path="res://Collector/tick2_rev.wav" id="3_lxafl"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fbd6t"]
playback_mode = 2
streams_count = 2
stream_0/stream = ExtResource("2_8obq2")
stream_1/stream = ExtResource("3_lxafl")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pg21k"]
playback_mode = 2
streams_count = 2
stream_0/stream = ExtResource("2_8obq2")
stream_1/stream = ExtResource("3_lxafl")

[node name="Clock" type="Node3D" groups=["Clock"]]
script = ExtResource("1_pg21k")

[node name="TickingSound3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_fbd6t")

[node name="TickingSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_pg21k")
playback_type = 2

[node name="TickTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
